# hpc-usage-queries

./: .env.example  .gitignore  CLAUDE.md  Chart.yaml  HISTOGRAM_IMPLEMENTATION.md  Makefile  README.md  compose.yaml  conda-env.yaml  conftest.py  data  plot_usage_history.py  pyproject.toml  values.yaml
.github/workflows/: hpc-usage-queries-ci-postgres.yaml  hpc-usage-queries-ci.yaml  qhist_db-ci.yaml
conda-env/conda-meta/: bzip2-1.0.8-hd037594_8.json  ca-certificates-2025.11.12-hbd8a1cb_0.json  click-8.3.1-pyh8f84b5b_1.json  click-default-group-1.2.4-pyhd8ed1ab_1.json  history  libexpat-2.7.3-haf25636_0.json  libffi-3.5.2-he5f378a_0.json  liblzma-5.8.1-h39f12f2_2.json  libmpdec-4.0.0-h5505292_0.json  libsqlite-3.51.1-h9a5124b_0.json  libzlib-1.3.1-h8359307_2.json  ncurses-6.5-h5e97a16_3.json  openssl-3.6.0-h5503f6c_0.json  pip-25.3-pyh145f28c_0.json  pluggy-1.6.0-pyhd8ed1ab_0.json  python-3.14.0-h40d2674_102_cp314.json  python-dateutil-2.9.0.post0-pyhe01879c_2.json  python_abi-3.14-8_cp314.json  readline-8.2-h1d1bf99_2.json  six-1.17.0-pyhe01879c_1.json  sqlite-3.51.1-he8f07e4_0.json  sqlite-fts4-1.0.3-pyhaa4b35c_1.json  sqlite-utils-3.39-pyhcf101f3_0.json  tabulate-0.9.0-pyhd8ed1ab_2.json  tk-8.6.13-h892fb3f_3.json  tzdata-2025b-h78e105d_0.json  zstd-1.5.7-hd0aec43_5.json
conda-env/etc/: aau_token
conda-env/lib/: libncurses.6.dylib  libncursesw.6.dylib  libsqlite3.3.51.1.dylib  libtcl8.6.dylib  libtinfo.6.dylib  libtinfow.6.dylib  libzstd.1.5.7.dylib  tclConfig.sh  tkConfig.sh
data/: .gitignore
docs/: DIR-cout-plan.md  GPFS_SCANS.md  GPFS_SCANS_DB.md  GPFS_SCAN_optimizations.md  IMPLEMENTATION_SUMMARY.md  Pass1-Refactor-Plan.md  PbsRecord-plan.md  REFACTOR-schema-plan.md  SCAN_more_queries.md  SEARCH-refactor.md  pbsparse-plan.md  refactoring-plan.md  schema.md  temp-table-issues.md
docs/fs_scans/: REFACTORING_TODO.md
etc/: config_env.sh  fs_scan.pbs
etc/crontabs/: cs-usage-weely-db-update.cron
fs_scans/: README.md  REFACTORING_SUMMARY.md  REFACTORING_TODO.md  __init__.py  cli_common.py  database.py  models.py  parse_gpfs_scan.py  query_builder.py  query_db.py  scan_to_db.py
fs_scans/PBS/: cron_driver.sh  fs_scan.pbs  rsync_results.pbs  submit_all.sh
fs_scans/cli/: analyze_cmd.py  common.py  import_cmd.py  main.py  query_cmd.py
fs_scans/core/: database.py  models.py  query_builder.py
fs_scans/importers/: add_table_indexing.py  common_imports.py  file_handling.py  importer.py  pass1.py  pass2.py  pass2a.py  pass2b.py  pass3.py
fs_scans/parsers/: __init__.py  base.py  gpfs.py  lustre.py  posix.py
fs_scans/queries/: __init__.py  access_history.py  display.py  file_size.py  histogram_common.py  query_engine.py
fs_scans/tests/: __init__.py  conftest.py  noop_test.sh  test_fs_scans_parsers.py
fs_scans/wrappers/: fs_scans_analyze.py  fs_scans_import.py  fs_scans_query.py
helm/: values.yaml
helm/templates/: cert.yaml  postgres_cluster.yaml  su_external_secret.yaml  user_external_secret.yaml
job_history/: README.md  SCHEMA.md  __init__.py  charging.py  cli.py  config.py  database.py  jobhist_compat.py  log_config.py  models.py  pbs_parsers.py  pbs_read_logs.py  qhist-from-db.md  qhist_plugin.py  queries.py  query_builders.py  sync.py  utils.py
job_history/_vendor/: ncar.py
job_history/cli/: __init__.py
job_history/cron_scripts/: crontab  daily.sh  rapid.sh  sync_ncar_job_dbs.sh  weekly.sh
job_history/database/: __init__.py  config.py  models.py  session.py
job_history/plots/: .gitignore  Makefile  gen_all.sh  plot_usage_history.ipynb  plot_usage_history.py
job_history/queries/: __init__.py  builders.py  jobs.py
job_history/sync/: __init__.py  base.py  charging.py  cli.py  importer.py  pbs.py  slurm.py  summary.py  utils.py
job_history/sync_cli/: __init__.py  common.py  sync.py  sync_cmd.py  wrappers.py
job_history/tests/: __init__.py  conftest.py  integtation_test.sh  test_charging.py  (+19 more)
plots/: gen_all.sh  plot_usage_history.ipynb
prompts/: 02-charging-views.txt  03-CLI-tool.txt  04-memory-report.txt
qhist_db/: README.md  SCHEMA.md  __init__.py  charging.py  cli.py  database.py  models.py  parsers.py  pbs_local.py  pbs_parsers.py  pbs_read_logs.py  qhist-from-db.md  qhist_compat.py  queries.py  query_builders.py  summary.py  sync.py  utils.py
scripts/: cirrus_healthcheck.sh  parse_pbs_logs.py  sync_jobs.py
templates/: pg_service.yaml  su_external_secret.yaml  user_external_secret.yaml
tests/: __init__.py  conftest.py  test_analyze_command.py  test_charging.py  test_fs_scans.py  test_fs_scans_parsers.py  test_gen_all_queries.py  test_histogram_import.py  test_models.py  test_pbs_integration.py  test_pbs_parsers.py  test_queries.py  test_query_builders.py  test_summary.py
(+230 files in other folders)
