[project]
name = "qhist-db"
version = "0.1.0"
description = "SQLite database toolkit for NCAR HPC job history"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "rich",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

analysis = [
         "qhist-db[dev]",
         "jupyterlab",
         "numpy",
         "matplotlib",
         "pyyaml",
         "pandas",
]

[project.scripts]
qhist-sync = "scripts.sync_jobs:main"
qhist-report = "qhist_db.cli:cli"

# New unified CLI
fs-scans = "fs_scans.cli.main:fs_scans_cli"

# Convenience wrappers (allow selective deployment)
fs-scans-import = "fs_scans.wrappers.fs_scans_import:main"
fs-scans-query = "fs_scans.wrappers.fs_scans_query:main"
fs-scans-analyze = "fs_scans.wrappers.fs_scans_analyze:main"

# Old CLIs (kept for backward compatibility temporarily)
fs-scan-to-db = "fs_scans.scan_to_db:main"
query-fs-scan-db = "fs_scans.query_db:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qhist_db*", "scripts*", "fs_scans*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
