[project]
name = "qhist-db"
version = "0.1.0"
description = "SQLite database toolkit for NCAR HPC job history"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "rich",
    "click",
    "pbsparse",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

analysis = [
         "qhist-db[dev]",
         "jupyterlab",
         "numpy",
         "matplotlib",
         "pyyaml",
         "pandas",
]

[project.scripts]
# Main unified CLI
qhist-db = "qhist_db.cli:cli"

# Backward compatibility wrappers
qhist-report = "qhist_db.cli:cli"
qhist-parse-logs = "qhist_db.sync_cli.wrappers:parse_logs_wrapper"

# New unified CLI
fs-scans = "fs_scans.cli.main:fs_scans_cli"

# Convenience wrappers (allow selective deployment)
fs-scans-import = "fs_scans.wrappers.fs_scans_import:main"
fs-scans-query = "fs_scans.wrappers.fs_scans_query:main"
fs-scans-analyze = "fs_scans.wrappers.fs_scans_analyze:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qhist_db*", "scripts*", "fs_scans*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    # Ignore SQLAlchemy datetime adapter deprecation warnings in Python 3.12+
    # These are internal SQLAlchemy issues that will be fixed in future releases
    "ignore:The default datetime adapter is deprecated:DeprecationWarning:sqlalchemy",
]
