[project]
name = "hpc-usage-queries"
version = "0.1.0"
description = "SQLite database toolkit for NCAR HPC resource usage queries"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "rich",
    "click",
    "pbsparse>=0.2.6",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

postgres = [
    "psycopg2-binary",
]

analysis = [
         "hpc-usage-queries[dev,postgres]",
         "jupyterlab",
         "numpy",
         "matplotlib",
         "pyyaml",
         "pandas",
]

[project.scripts]
# unified job history CLI
jobhist = "job_history.cli:cli"

# unified filesystem scans CLI
fs-scans = "fs_scans.cli.main:fs_scans_cli"

# Convenience wrappers (allow selective deployment)
fs-scans-import = "fs_scans.wrappers.fs_scans_import:main"
fs-scans-query = "fs_scans.wrappers.fs_scans_query:main"
fs-scans-analyze = "fs_scans.wrappers.fs_scans_analyze:main"

# jobhist convenience wrappers (allow selective deployment)
jobhist-sync = "job_history.wrappers.jobhist_sync:main"
jobhist-history = "job_history.wrappers.jobhist_history:main"
jobhist-resource = "job_history.wrappers.jobhist_resource:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["job_history*", "scripts*", "fs_scans*"]

[tool.pytest.ini_options]
testpaths = ["job_history/tests", "fs_scans/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    # Ignore SQLAlchemy datetime adapter deprecation warnings in Python 3.12+
    # These are internal SQLAlchemy issues that will be fixed in future releases
    "ignore:The default datetime adapter is deprecated:DeprecationWarning:sqlalchemy",
]
